fix spacing for experience page

--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -199,6 +199,7 @@ a {
   background-size: cover;
   background-position: center;
   height: 30rem;
+  max-width: 35rem;
   border-radius: 2.5rem;
   display: flex;
 }
@@ -495,7 +496,7 @@ main h1 {
 .Experience-wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: flex-start;
   height: 100%;
   padding: 1rem;
   border-radius: 2rem;
